--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,149 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
+.App {
+  min-height: 100vh;
+  width: 100%;
+}
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  display: flex;
+  height: 3rem;
+  width: 3rem;
+  color: #fff;
+  align-items: center;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 10px;
+  height: 4rem;
+  border-bottom: 1px solid #fff;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.head-img {
+  display: flex;
+  align-items: center;
+  height: 3rem;
+}
+header nav {
+  display: flex;
+  min-width: 270px;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+header nav a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover,
+.active {
+  text-decoration: overline;
+  text-shadow: 0px 0px 10px currentColor;
+}
+
+button,
+input {
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  margin: 2px;
+}
+
+button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+form {
+  padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+svg {
+  padding: 5px;
+}
+
+svg:hover {
+  cursor: pointer;
+  background-color: #aaa;
+  border-radius: 50%;
+}
+
+ol,
+ul {
+  width: max-content;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding-left: 0;
+}
+
+li {
+  background-color: #ccc;
+  padding: 0.5rem;
+  border-radius: 5px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+li:hover {
+  opacity: 0.8;
+}
+
+input,
+select {
+  padding: 0.5rem 1rem;
+  border: 2px solid;
+  background: #ddd;
+  border-radius: 5px;
+}
+
+button:hover {
+  transform: scale(0.95);
+  cursor: pointer;
+}
+
+.secondaryBtn {
+  background-color: #fff;
+  color: #111;
+}
+
+button {
+  background-color: #343434;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  border: 2px solid #343434;
+  font-weight: bold;
+  margin: 3px;
+}
+
+.loader {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  border: 10px double currentColor;
+  border-top: 10px solid #aaa;
+  animation: 1s linear 0s infinite spin;
+}
+
+@keyframes spin {
   to {
     transform: rotate(360deg);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.chart {
+  width: 100vh;
+  margin: auto;
 }
